tests/lifetime_error.june
// error: can't find compatible lifetime between param 'stats' and param 'employee'

struct Stats {
    age: i64
}

struct Employee {
    name: string,
    stats: shared Stats,
}

fun helper(mut employee: shared Employee, stats: shared Stats) {
    employee.stats = stats
}

fun main() {
    mut employee = new shared Employee(name: "Sophia", stats: new shared Stats(age: 22))

    helper(employee, new shared Stats(age: 33))

    println(employee.stats.age)
}